# htmlishell

./: .cruft.json  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy-pypi.yml  test.yml
brrr/: __main__.py  utils.py
htmlishell/: __init__.py  __main__.py  parsing.py
src/: __init__.py  __main__.py  config.py
tests/: test_parsing.py
